--- a/rpc-server-provider/pom.xml
+++ b/rpc-server-provider/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>rpc-server-provider</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.yp</groupId>
+            <artifactId>rpc-server-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
