--- a/rpc-server-provider/pom.xml
+++ b/rpc-server-provider/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>rpc-server-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.13.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
